--- a/public/index.html
+++ b/public/index.html
@@ -21,12 +21,12 @@
 <body>
   <!-- sidebar -->
   <input id="sidebar-toggle" type="button" onclick="return false;">
-  <div id="sidebar" class="sidebar">
+  <div id="sidebar" class="sidebar minimized-sidebar">
     <!-- toggle button -->
     <label for="sidebar-toggle" class="toggle-btn">
       <div class="nav-link disabled">
         <span>GenericDash</span>
-        <i class="icofont-children-care"></i>
+        <i class="icofont-navigation-menu"></i>
       </div>
     </label>
 
@@ -34,7 +34,7 @@
     <ul class="nav flex-column">
       <li class="nav-item">
         <a class="nav-link active" href="#">
-          <span>Active</span>
+          <span>Profile</span>
           <i class="icofont-user-alt-3"></i>
         </a>
       </li>
