added public html templates
not apart of the sideboard dash

--- a/public/index.html
+++ b/public/index.html
@@ -33,19 +33,25 @@
     <!-- navigation -->
     <ul class="nav flex-column">
       <li class="nav-item">
-        <a class="nav-link active" href="#">
+        <a class="nav-link active" href="#!">
+          <span>Home</span>
+          <i class="icofont-home"></i>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/profile.html">
           <span>Profile</span>
           <i class="icofont-user-alt-3"></i>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="/groups.html">
           <span>Groups</span>
           <i class="icofont-users-alt-5"></i>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="/books.html">
           <span>Books</span>
           <i class="icofont-book"></i>
         </a>
@@ -66,60 +72,22 @@
   </div>
 
   <!-- content area (edit this area) -->
-  <div id="main" class="main">
-    <div id="content" class="container">
-      <ul class="nav nav-pills">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Active</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
-        </li>
-      </ul>
+  <div id="main" class="main text-light">
+    <div class="cover-page d-flex text-center text-white bg-dark">
+      <div class="cover-container d-flex w-100 p-3 mx-auto flex-column">
+        <main class="px-3">
+          <h1>Cover your page.</h1>
+          <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the
+            text, and add your own fullscreen background photo to make it your own.</p>
+          <p class="lead">
+            <a href="#" class="btn text-dark btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
+          </p>
+        </main>
 
-      <div class="row">
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto impedit, sequi neque, quo necessitatibus recusandae similique corrupti accusantium consequuntur eos aut alias cupiditate quasi eaque nostrum. Odio repellendus ullam aspernatur placeat, inventore voluptatum, officiis eius asperiores ipsam reprehenderit dolor eos, tenetur officia quia. Modi voluptas corporis necessitatibus ipsum dignissimos fugiat incidunt temporibus provident blanditiis magnam nam odio aliquid, culpa itaque rerum ratione unde, suscipit aut amet eaque molestias quisquam autem accusantium! Modi voluptas illo nihil veritatis autem dolorum consequuntur repellat explicabo ducimus, nobis, inventore vero enim quae deserunt. Ratione, eligendi voluptatem. Unde eaque voluptatem, facere vero obcaecati sunt? Fuga, accusamus!
-        </p>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto impedit, sequi neque, quo necessitatibus recusandae similique corrupti accusantium consequuntur eos aut alias cupiditate quasi eaque nostrum. Odio repellendus ullam aspernatur placeat, inventore voluptatum, officiis eius asperiores ipsam reprehenderit dolor eos, tenetur officia quia. Modi voluptas corporis necessitatibus ipsum dignissimos fugiat incidunt temporibus provident blanditiis magnam nam odio aliquid, culpa itaque rerum ratione unde, suscipit aut amet eaque molestias quisquam autem accusantium! Modi voluptas illo nihil veritatis autem dolorum consequuntur repellat explicabo ducimus, nobis, inventore vero enim quae deserunt. Ratione, eligendi voluptatem. Unde eaque voluptatem, facere vero obcaecati sunt? Fuga, accusamus!
-        </p>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto impedit, sequi neque, quo necessitatibus recusandae similique corrupti accusantium consequuntur eos aut alias cupiditate quasi eaque nostrum. Odio repellendus ullam aspernatur placeat, inventore voluptatum, officiis eius asperiores ipsam reprehenderit dolor eos, tenetur officia quia. Modi voluptas corporis necessitatibus ipsum dignissimos fugiat incidunt temporibus provident blanditiis magnam nam odio aliquid, culpa itaque rerum ratione unde, suscipit aut amet eaque molestias quisquam autem accusantium! Modi voluptas illo nihil veritatis autem dolorum consequuntur repellat explicabo ducimus, nobis, inventore vero enim quae deserunt. Ratione, eligendi voluptatem. Unde eaque voluptatem, facere vero obcaecati sunt? Fuga, accusamus!
-        </p>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto impedit, sequi neque, quo necessitatibus recusandae similique corrupti accusantium consequuntur eos aut alias cupiditate quasi eaque nostrum. Odio repellendus ullam aspernatur placeat, inventore voluptatum, officiis eius asperiores ipsam reprehenderit dolor eos, tenetur officia quia. Modi voluptas corporis necessitatibus ipsum dignissimos fugiat incidunt temporibus provident blanditiis magnam nam odio aliquid, culpa itaque rerum ratione unde, suscipit aut amet eaque molestias quisquam autem accusantium! Modi voluptas illo nihil veritatis autem dolorum consequuntur repellat explicabo ducimus, nobis, inventore vero enim quae deserunt. Ratione, eligendi voluptatem. Unde eaque voluptatem, facere vero obcaecati sunt? Fuga, accusamus!
-        </p>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto impedit, sequi neque, quo necessitatibus recusandae similique corrupti accusantium consequuntur eos aut alias cupiditate quasi eaque nostrum. Odio repellendus ullam aspernatur placeat, inventore voluptatum, officiis eius asperiores ipsam reprehenderit dolor eos, tenetur officia quia. Modi voluptas corporis necessitatibus ipsum dignissimos fugiat incidunt temporibus provident blanditiis magnam nam odio aliquid, culpa itaque rerum ratione unde, suscipit aut amet eaque molestias quisquam autem accusantium! Modi voluptas illo nihil veritatis autem dolorum consequuntur repellat explicabo ducimus, nobis, inventore vero enim quae deserunt. Ratione, eligendi voluptatem. Unde eaque voluptatem, facere vero obcaecati sunt? Fuga, accusamus!
-        </p>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto impedit, sequi neque, quo necessitatibus recusandae similique corrupti accusantium consequuntur eos aut alias cupiditate quasi eaque nostrum. Odio repellendus ullam aspernatur placeat, inventore voluptatum, officiis eius asperiores ipsam reprehenderit dolor eos, tenetur officia quia. Modi voluptas corporis necessitatibus ipsum dignissimos fugiat incidunt temporibus provident blanditiis magnam nam odio aliquid, culpa itaque rerum ratione unde, suscipit aut amet eaque molestias quisquam autem accusantium! Modi voluptas illo nihil veritatis autem dolorum consequuntur repellat explicabo ducimus, nobis, inventore vero enim quae deserunt. Ratione, eligendi voluptatem. Unde eaque voluptatem, facere vero obcaecati sunt? Fuga, accusamus!
-        </p>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto impedit, sequi neque, quo necessitatibus recusandae similique corrupti accusantium consequuntur eos aut alias cupiditate quasi eaque nostrum. Odio repellendus ullam aspernatur placeat, inventore voluptatum, officiis eius asperiores ipsam reprehenderit dolor eos, tenetur officia quia. Modi voluptas corporis necessitatibus ipsum dignissimos fugiat incidunt temporibus provident blanditiis magnam nam odio aliquid, culpa itaque rerum ratione unde, suscipit aut amet eaque molestias quisquam autem accusantium! Modi voluptas illo nihil veritatis autem dolorum consequuntur repellat explicabo ducimus, nobis, inventore vero enim quae deserunt. Ratione, eligendi voluptatem. Unde eaque voluptatem, facere vero obcaecati sunt? Fuga, accusamus!
-        </p>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto impedit, sequi neque, quo necessitatibus recusandae similique corrupti accusantium consequuntur eos aut alias cupiditate quasi eaque nostrum. Odio repellendus ullam aspernatur placeat, inventore voluptatum, officiis eius asperiores ipsam reprehenderit dolor eos, tenetur officia quia. Modi voluptas corporis necessitatibus ipsum dignissimos fugiat incidunt temporibus provident blanditiis magnam nam odio aliquid, culpa itaque rerum ratione unde, suscipit aut amet eaque molestias quisquam autem accusantium! Modi voluptas illo nihil veritatis autem dolorum consequuntur repellat explicabo ducimus, nobis, inventore vero enim quae deserunt. Ratione, eligendi voluptatem. Unde eaque voluptatem, facere vero obcaecati sunt? Fuga, accusamus!
-        </p>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto impedit, sequi neque, quo necessitatibus recusandae similique corrupti accusantium consequuntur eos aut alias cupiditate quasi eaque nostrum. Odio repellendus ullam aspernatur placeat, inventore voluptatum, officiis eius asperiores ipsam reprehenderit dolor eos, tenetur officia quia. Modi voluptas corporis necessitatibus ipsum dignissimos fugiat incidunt temporibus provident blanditiis magnam nam odio aliquid, culpa itaque rerum ratione unde, suscipit aut amet eaque molestias quisquam autem accusantium! Modi voluptas illo nihil veritatis autem dolorum consequuntur repellat explicabo ducimus, nobis, inventore vero enim quae deserunt. Ratione, eligendi voluptatem. Unde eaque voluptatem, facere vero obcaecati sunt? Fuga, accusamus!
-        </p>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto impedit, sequi neque, quo necessitatibus recusandae similique corrupti accusantium consequuntur eos aut alias cupiditate quasi eaque nostrum. Odio repellendus ullam aspernatur placeat, inventore voluptatum, officiis eius asperiores ipsam reprehenderit dolor eos, tenetur officia quia. Modi voluptas corporis necessitatibus ipsum dignissimos fugiat incidunt temporibus provident blanditiis magnam nam odio aliquid, culpa itaque rerum ratione unde, suscipit aut amet eaque molestias quisquam autem accusantium! Modi voluptas illo nihil veritatis autem dolorum consequuntur repellat explicabo ducimus, nobis, inventore vero enim quae deserunt. Ratione, eligendi voluptatem. Unde eaque voluptatem, facere vero obcaecati sunt? Fuga, accusamus!
-        </p>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto impedit, sequi neque, quo necessitatibus recusandae similique corrupti accusantium consequuntur eos aut alias cupiditate quasi eaque nostrum. Odio repellendus ullam aspernatur placeat, inventore voluptatum, officiis eius asperiores ipsam reprehenderit dolor eos, tenetur officia quia. Modi voluptas corporis necessitatibus ipsum dignissimos fugiat incidunt temporibus provident blanditiis magnam nam odio aliquid, culpa itaque rerum ratione unde, suscipit aut amet eaque molestias quisquam autem accusantium! Modi voluptas illo nihil veritatis autem dolorum consequuntur repellat explicabo ducimus, nobis, inventore vero enim quae deserunt. Ratione, eligendi voluptatem. Unde eaque voluptatem, facere vero obcaecati sunt? Fuga, accusamus!
-        </p>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto impedit, sequi neque, quo necessitatibus recusandae similique corrupti accusantium consequuntur eos aut alias cupiditate quasi eaque nostrum. Odio repellendus ullam aspernatur placeat, inventore voluptatum, officiis eius asperiores ipsam reprehenderit dolor eos, tenetur officia quia. Modi voluptas corporis necessitatibus ipsum dignissimos fugiat incidunt temporibus provident blanditiis magnam nam odio aliquid, culpa itaque rerum ratione unde, suscipit aut amet eaque molestias quisquam autem accusantium! Modi voluptas illo nihil veritatis autem dolorum consequuntur repellat explicabo ducimus, nobis, inventore vero enim quae deserunt. Ratione, eligendi voluptatem. Unde eaque voluptatem, facere vero obcaecati sunt? Fuga, accusamus!
-        </p>
+        <footer class="mt-auto text-white-50">
+          <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a
+              href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
+        </footer>
       </div>
     </div>
   </div>
